<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="Interval" Id="{c6160f0d-4eaf-4650-ba9d-f76549969dfb}">
    <Declaration><![CDATA[TYPE Interval :
STRUCT
	startPos : REAL;
	endPos : REAL;
END_STRUCT
END_TYPE]]></Declaration>
  </DUT>
</TcPlcObject>